# MIMIC-Clinical-Demo-Project

./: .gitignore  QUESTIONS.MD  README.md  create_patients_table.sql  create_procedures_table.sql  environment.yml  export_csvs.py  icu-admissions-breakdown.pbix  load_csvs.py  main.py  pixi.toml  pyproject.toml
